--- a/todoList.html
+++ b/todoList.html
@@ -16,7 +16,7 @@
     </nav>
     <div class="input-group mb-3">
       <input id="title" type="text" class="form-control" placeholder="Create todo" aria-label="Create todo" aria-describedby="button-addon2">
-      <button onclick="postTodos()" type="button" class="btn btn-secondary">Button</button>
+      <button onclick="handleNewTodo()" type="button" class="btn btn-secondary">Button</button>
     </div>
     <div class="container my-3">
       <div class="row">
